--- a/index.html
+++ b/index.html
@@ -6,22 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>프로젝트 모음</title>
     <!-- Bootstrap CSS -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+    <link rel="manifest" href="/img/site.webmanifest">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel="import" href="/header.html">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript">   
+      $(document).ready( function() {
+        $("#headers").load("/header.html");
+        $("#footers").load("/footer.html");
+      });
+      </script>
 </head>
-<body>
+<body class= "d-flex vw-100 vh-100 text-center flex-column justify-content-between">
+  <!-- 헤더 시작 -->
+  <div id="headers"></div>
+  <!-- 헤더 끝 시작 -->
+
+  <!-- 메인 시작 -->
   <main>
-
+    <p class="bg-warning">로또와 가위바위보 들어 가는 자리</p>
   </main>
+  <!-- 메인 끝 -->
 
-  <footer class="ft">
-    <div class="wrap">
-      <p>© 2023 Company, Inc</p>
-    </div>
-  </footer>
+  <!-- 푸터 시작 -->
+  <div id="footers"></div>
+  <!-- 푸터 끝 -->
 </body>
 
 <script>
