--- a/header.html
+++ b/header.html
@@ -15,12 +15,13 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="main_logo navbar-brand" href="#">✈</a>
+        <a class="main_logo navbar-brand" href="index.html">✈</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarScroll">
           <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-            <li class="nav-item"><a class="nav-link" href="/Game_Site/DateTables.html">게시판</a></li>
-            <li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">가위바위보</a></li>
+            <li class="nav-item"><a class="nav-link" href="lotto.html">로또</a></li>
+            <li class="nav-item"><a class="nav-link" href="Rock.html" tabindex="-1" aria-disabled="true">가위바위보</a></li>
+            <li class="nav-item"><a class="nav-link" href="DateTables.html" tabindex="-1" aria-disabled="true">콘솔 게시판</a></li>
 
             <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -36,7 +37,7 @@
           </ul>
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn btn-outline-light" type="submit">Search</button>
           </form>
         </div>
       </div>
