--- a/Rock.html
+++ b/Rock.html
@@ -21,19 +21,47 @@
       });
       </script>
 </head>
-<body class= "d-flex vw-100 vh-100 text-center flex-column justify-content-between">
+<body class="d-flex vw-100 vh-100 text-center flex-column justify-content-between">
     <!-- 헤더 시작 -->
     <div id="headers"></div>
     <!-- 헤더 끝 시작 -->
 
-    <h1>랜덤 가위바위보 게임</h1>
-    <p>가위, 바위, 보 중 하나를 선택하세요.</p>
-    <div class="choose">
-        <button onclick="play('가위')">가위</button>
-        <button onclick="play('바위')">바위</button>
-        <button onclick="play('보')">보</button>
-    </div>
-    <p id="result"></p>
+    <main>
+        <h1>가위바위보 게임</h1>
+        <div class="wrap content w-75">
+            <div class="d-flex text-center justify-content-center w-100">
+                <div class="card" style="width: 18rem;margin: 0 10px;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">YOU</h5>
+                      <p class="card-text">하나를 선택하세요</p>
+                      <div class="choose">
+                          <button onclick="play('가위')">가위</button>
+                          <button onclick="play('바위')">바위</button>
+                          <button onclick="play('보')">보</button>
+                      </div>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem; margin: 0 10px;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">결과</h5>
+                        <p id="result" class="card-text">결과</p>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem; margin: 0 10px;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">COM</h5>
+                      <p class="card-text">가위바위보</p>
+                      <div class="">
+                          <button>가위</button>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
     <!-- 푸터 시작 -->
     <div id="footers"></div>
