--- a/header.html
+++ b/header.html
@@ -21,7 +21,7 @@
           <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
             <li class="nav-item"><a class="nav-link" href="lotto.html">로또</a></li>
             <li class="nav-item"><a class="nav-link" href="Rock.html" tabindex="-1" aria-disabled="true">가위바위보</a></li>
-            <li class="nav-item"><a class="nav-link" href="DateTables.html" tabindex="-1" aria-disabled="true">콘솔 게시판</a></li>
+            <!-- <li class="nav-item"><a class="nav-link" href="DateTables.html" tabindex="-1" aria-disabled="true">콘솔 게시판</a></li> -->
 
             <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
