--- a/footer.html
+++ b/footer.html
@@ -7,14 +7,17 @@
     <title>프로젝트 모음</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <style>
+      .ft { font-size: 14px; width: 100%; background: #000; color: #ccc; display: flex; justify-content: center; align-items: center; padding: 20px 0 8px; border-top: 1px solid #ccc; }
+      .ft > * { text-align: center; }
+    </style>
 </head>
 <body>
     <footer class="ft">
         <div class="wrap">
-          <p>© 2023 Company, Inc</p>
+          <p>© 2023 JEONG-YUNJU</p>
         </div>
       </footer>
 </body>
